fill_currend_question

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     width: 30rem;
 }
 
+.card-title{
+    margin-bottom: 16px !important;
+}
+
 .questionFooter{
     display: flex;
     justify-content: space-between;
