--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body{
     width: 30rem;
 }
 
+.progress{
+    margin: 10px 16px 0 16px;
+    height: 10px !important;
+    /* background-color: #6B63B5 !important; */
+}
+
 .card-title{
     margin-bottom: 16px !important;
 }
